[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_0"
path = "src/day1/0.rs"

[[bin]]
name = "day1_1"
path = "src/day1/1.rs"

[[bin]]
name = "day2_0"
path = "src/day2/0.rs"

[[bin]]
name = "day2_1"
path = "src/day2/1.rs"

[[bin]]
name = "day3_0"
path = "src/day3/0.rs"

[[bin]]
name = "day3_1"
path = "src/day3/1.rs"

[[bin]]
name = "day4_0"
path = "src/day4/0.rs"

[[bin]]
name = "day4_1"
path = "src/day4/1.rs"

[[bin]]
name = "day5_0"
path = "src/day5/0.rs"

[[bin]]
name = "day5_1"
path = "src/day5/1.rs"

[dependencies]
aho-corasick = "1.1.2"
itertools = "0.12.0"
regex = "1.10.2"
