[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_0"
path = "src/day1/0.rs"

[[bin]]
name = "day1_1"
path = "src/day1/1.rs"

[[bin]]
name = "day2_0"
path = "src/day2/0.rs"

[[bin]]
name = "day2_1"
path = "src/day2/1.rs"

[[bin]]
name = "day3_0"
path = "src/day3/0.rs"

[[bin]]
name = "day3_1"
path = "src/day3/1.rs"

[[bin]]
name = "day4_0"
path = "src/day4/0.rs"

[[bin]]
name = "day4_1"
path = "src/day4/1.rs"

[[bin]]
name = "day5_0"
path = "src/day5/0.rs"

[[bin]]
name = "day5_1"
path = "src/day5/1.rs"

[[bin]]
name = "day6_0"
path = "src/day6/0.rs"

[[bin]]
name = "day6_1"
path = "src/day6/1.rs"

[[bin]]
name = "day7_0"
path = "src/day7/0.rs"

[[bin]]
name = "day7_1"
path = "src/day7/1.rs"

[[bin]]
name = "day8_0"
path = "src/day8/0.rs"

[[bin]]
name = "day8_1"
path = "src/day8/1.rs"

[[bin]]
name = "day9_0"
path = "src/day9/0.rs"

[[bin]]
name = "day9_1"
path = "src/day9/1.rs"

[[bin]]
name = "day10_0"
path = "src/day10/0.rs"

[[bin]]
name = "day10_1"
path = "src/day10/1.rs"

[dependencies]
aho-corasick = "1.1.2"
itertools = "0.12.0"
num = "0.4.1"
regex = "1.10.2"
